# multi-agent_turtlebot_ws

./: DETAILS.md  README.md  turtlebot_ws.code-workspace
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cv_localization/lib/cv_localization/: cv_mppi_direct_gui  cv_rl_direct_controller  tb3_vlcm_live_collector
install/cv_localization/share/cv_localization/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dynamixel_sdk/include/dynamixel_easy_sdk/: connector.hpp  control_table.hpp  data_types.hpp  dynamixel_easy_sdk.hpp  dynamixel_error.hpp  group_executor.hpp  motor.hpp
install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_fast_bulk_read.h  group_fast_sync_read.h  group_handler.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  (+5 more)
log/: latest_build  latest_test
models/: transformer_800.pt
src/cv_localization/: package.xml  setup.cfg  setup.py
src/cv_localization/config/: calibration.yaml  config.yaml
src/cv_localization/cv_localization/: calibrate_workspace.py  cv_mppi_direct_gui.py  cv_rl_direct_controller.py  detector.py  image_utils.py  tb3_vlcm_live_collector.py  test_detector.py
src/cv_localization/launch/: cv_mppi_direct.launch.py  cv_rl_direct.launch.py  cv_rl_vlcm_collect.launch.py
src/cv_localization/test/: test_cv_mppi_direct_gui.py  test_cv_rl_direct_controller.py  test_tb3_vlcm_live_collector.py
src/multi_robot_swarm_planner/: CMakeLists.txt  package.xml
src/multi_robot_swarm_planner/include/multi_robot_swarm_planner/: direct_room_mppi.hpp  swarm_mppi.hpp
src/multi_robot_swarm_planner/src/: central_fleet_planner.cpp  direct_room_mppi.cu  mppi_direct_controller.cpp  swarm_mppi.cu
src/multi_turtlebot_coordinator/: package.xml  setup.cfg  setup.py
src/multi_turtlebot_coordinator/launch/: multi_nav2_launch.py
src/multi_turtlebot_coordinator/rviz/: multi_robot_view.rviz
src/multi_turtlebot_coordinator/scripts/: goal_pose_router.py  initialize_and_navigate.py  tf_mux.py
(+502 files in other folders)
